--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "file-loader": "^0.11.1",
+    "url-loader": "^0.5.8"
   }
 }
