--- a/package.json
+++ b/package.json
@@ -16,22 +16,24 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.9",
-    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "css-loader": "^0.26.1",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1",
-    "express": "4.13.3",
+    "css-loader": "^0.28.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5",
+    "express": "4.15.2",
     "file-loader": "^0.11.1",
-    "url-loader": "^0.5.8"
+    "url-loader": "^0.5.8",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3"
   }
 }
