--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.28.1",
+    "express": "4.15.2",
+    "file-loader": "^0.11.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "style-loader": "^0.17.0",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5",
-    "express": "4.15.2",
-    "file-loader": "^0.11.1",
     "url-loader": "^0.5.8",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-uglify-js-plugin": "^1.1.9"
   }
 }
