--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --content-base src --inline --hot",
     "start": "node server.js",
-    "heroku-postbuild": "webpack --config -p ./webpack.prod.config.js"
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js"
   },
   "author": "",
   "engines": {
