--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.28.1",
+    "expose-loader": "^0.7.4",
     "express": "4.15.2",
     "file-loader": "^0.11.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "phaser-ce": "^2.9.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "style-loader": "^0.17.0",
